fix(grid): grid filter button cut off in IE11

--- a/packages/default/scss/dropdownlist/_layout.scss
+++ b/packages/default/scss/dropdownlist/_layout.scss
@@ -94,7 +94,7 @@
 
     // Dropdown operator
     .k-dropdown-operator {
-        width: auto;
+        min-width: $button-inner-calc-size;
 
         .k-dropdown-wrap {
             .k-input {
